cloudformation/network.yaml
Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Enter the ID of the VPC to launch your EC2 security group in

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: web
      GroupDescription: Allow HTTP, HTTPS, and SSH connections to host
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: fotd-kp

Outputs:
  SecurityGroup:
    Value: !Ref SecurityGroup
    Export:
      Name: SecurityGroup
  KeyPair:
    Value: !Ref KeyPair
    Export:
      Name: KeyPair
